--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://atomcorp.github.io/amyleeaudio/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx @11ty/eleventy --input=src --output=build --serve",
     "build": "npx @11ty/eleventy --input=src --output=deploy --pathprefix=amyleeaudio",
-    "deploy": "gh-pages -d deploy"
+    "deploy": "gh-pages -d deploy",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atomcorp/amyswork.git"
+    "url": "git+https://github.com/atomcorp/amyleeaudio.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/atomcorp/amyswork/issues"
   },
-  "homepage": "https://github.com/atomcorp/amyswork#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "gh-pages": "^3.1.0"
